# salt

./: .pre-commit-config.yaml  kitchen.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
pkg/osx/: req.txt
requirements/: windows.txt
requirements/static/ci/: linux.in  windows.in
requirements/static/ci/py3.5/: darwin.txt  linux.txt  windows.txt
requirements/static/ci/py3.6/: darwin.txt  linux.txt  windows.txt
requirements/static/ci/py3.7/: darwin.txt  linux.txt  windows.txt
requirements/static/ci/py3.8/: darwin.txt  linux.txt
requirements/static/ci/py3.9/: darwin.txt  linux.txt
requirements/static/pkg/: windows.in
requirements/static/pkg/py3.5/: darwin.txt  windows.txt
requirements/static/pkg/py3.6/: darwin.txt  windows.txt
requirements/static/pkg/py3.7/: darwin.txt  windows.txt
requirements/static/pkg/py3.8/: darwin.txt
requirements/static/pkg/py3.9/: darwin.txt
requirements/static/py3.5/: darwin.txt  linux.txt  windows.txt
requirements/static/py3.6/: darwin.txt  linux.txt  windows.txt
requirements/static/py3.7/: darwin.txt  linux.txt  windows.txt
requirements/static/py3.8/: darwin.txt  linux.txt
requirements/static/py3.9/: darwin.txt  linux.txt
tasks/: __init__.py
tests/integration/modules/: test_cmdmod.py  test_cp.py  test_saltutil.py  test_state.py
tests/integration/proxy/: test_shell.py
tests/support/: helpers.py
tests/unit/: test_config.py  test_module_names.py
tests/unit/setup/: test_bdist.py  test_egg.py
tests/unit/transport/: test_tcp.py  test_zeromq.py
tests/unit/utils/: test_event.py
(+10 files in other folders)
