[metadata]
name = salt
version = attr: salt.version.__version__
description = Portable, distributed, remote execution and configuration management system
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Thomas S Hatch
author_email = thatch45@gmail.com
url = http://saltstack.com
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing

[options]
zip_safe = False
include_package_data = True
packages = find:

[bdist_wheel]
universal = 0
